--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     </head>
     
     <body>
-        Content goes here.
+        <div id="contaner">
+            <label>pass word generater</label>
+            <button type="button" id="go">generate pssword</button>
+            <div id="output">output</div>
+          </div>
         <script src="javascript.js"></script>
     </body>
 </html>
